Add Equipment / Point / Property Tags
Signed-off-by: Paul Smedley <paul@smedley.id.au>